@@ -7,11 +7,12 @@ Additions
 10/05/25 r355 [3] Added Portuguese language file
 
 Changes
+10/07/05 r361 do_p10_burst now supports +L channel mode
 10/07/02 r358 inspircd12 module declared compatible with inspircd 2.0
 10/07/02 r357 Updated GeoIP.dat
 
 Fixes
-10/07/03 r359 Do not expect parameter when removing non-ban chanmodes [closes #1170]
+10/07/05 r361 Fixed nefarious13 module missing channel +L support
 10/07/03 r358 Fixed autoop not working properly on some ircds
 10/03/27 r353 [2] Fixed Nefarious kill message parsing
 10/03/15 r352 [2] Fixed X3 version reply interpretation
